--- a/index.html
+++ b/index.html
@@ -26,6 +26,13 @@
 				<p>PO Box 698<br/>Fishers, IN 46038</p>
 			</li>
 			<li>
+				<h3>E</h3>
+				<A HREF="mailto:
+&#105;&#110;&#102;&#111;&#064;&#110;&#111;&#118;&#101;&#108;&#098;&#105;&#116;&#115;&#046;&#105;&#111;">
+&#105;&#110;&#102;&#111;&#064;&#110;&#111;&#118;&#101;&#108;&#098;&#105;&#116;&#115;&#046;&#105;&#111;
+</A>"
+			</li>
+			<li>
 				<h3>S</h3>
 				<p class="social">
 					<a href="https://twitter.com/novelbits" class="tw"></a>
